# ClientApp/src/app/api/models.ts
@@ -1,3 +1,5 @@
 /* tslint:disable */
 /* eslint-disable */
+export { Order } from './models/order';
+export { OrderResult } from './models/order-result';
 export { WeatherForecast } from './models/weather-forecast';
