# ClientApp/src/app/api/models/order-result.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+/* eslint-disable */
+import { Order } from './order';
+export interface OrderResult {
+  count?: number;
+  list?: null | Array<Order>;
+}
