# ClientApp/src/app/api/models/order.ts
@@ -1,0 +1,8 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface Order {
+  count?: null | string;
+  id?: number;
+  name?: null | string;
+  price?: number;
+}
